--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "moment": "^2.29.1",
     "morgan": "~1.9.1",
+    "mssql": "^7.1.0",
+    "mysql": "^2.18.1",
     "tedious": "^11.0.8"
   }
 }
